--- a/sass_scss/102-media_query.scss
+++ b/sass_scss/102-media_query.scss
@@ -1,15 +1,15 @@
 h1 {
   font-size: 20px;
 
-  @media (max-width: 959px) {
+  @media screen and (max-width: 960px) {
     font-size: 18px;
   }
 
-  @media (max-width: 639px) {
+  @media screen and (max-width: 640px) {
     font-size: 16px;
   }
 
-  @media (max-width: 319px) {
+  @media screen and (max-width: 320px) {
     font-size: 14px;
 
     &.small {
