--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,4 +1,34 @@
-$sorted_list: sort($list_to_sort);
+/* Function to compare two strings */
+@function compare($a, $b) {
+  @if $a < $b {
+    @return -1;
+  } @else if $a > $b {
+    @return 1;
+  } @else {
+    @return 0;
+  }
+}
 
-@debug $sorted_list;
+/* Function to sort a list manually */
+@function manual-sort($list) {
+  $sorted-list: ();
+  $list-length: length($list);
 
+  @for $i from 1 through $list-length {
+    $min-index: $i;
+
+    @for $j from $i + 1 through $list-length {
+      @if compare(nth($list, $j), nth($list, $min-index)) == -1 {
+        $min-index: $j;
+      }
+    }
+
+    /* Swap elements */
+    $temp: nth($list, $i);
+    $sorted-list: append($sorted-list, nth($list, $min-index));
+    $list: set(nth($list, $i), nth($list, $min-index));
+    $list: set(nth($list, $min-index), $temp);
+  }
+
+  @return $sorted-list;
+}
